--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -23,7 +24,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout"
-        android:layout_width="350dp"
+        android:layout_width="344dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/pager"
         app:layout_constraintRight_toRightOf="@id/pager"
@@ -32,14 +33,15 @@
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="344dp"
+        android:layout_height="420dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.636" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/back_button"
@@ -48,6 +50,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:backgroundTint="#ffffff"
+        android:onClick="clickBack"
         app:icon="@drawable/back_arrow"
         app:iconGravity="textStart"
         app:iconSize="35dp"
@@ -57,8 +60,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.908"
-        android:onClick="clickBack"/>
+        app:layout_constraintVertical_bias="0.943" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/next_button"
@@ -67,6 +69,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:backgroundTint="#ffffff"
+        android:onClick="clickNext"
         app:icon="@drawable/next_arrow"
         app:iconGravity="textStart"
         app:iconSize="35dp"
@@ -76,8 +79,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.908"
-        android:onClick="clickNext"/>
+        app:layout_constraintVertical_bias="0.943" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
