--- a/app/src/main/res/layout/fragment3.xml
+++ b/app/src/main/res/layout/fragment3.xml
@@ -10,7 +10,18 @@
         android:id="@+id/image_view3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toTopOf="@id/text_view3"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/text_view3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="15dp"
+        android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
